# infix-macro

./: Cargo.toml  README.md
src/: lib.rs  prelude.rs
src/utils/: infix.rs
