[package]
name = "infix_fn"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Procedural macro used to make infix function calls similarly to Haskell's syntax with pound (#) instead of backticks (`)"

[lib]
proc-macro = true

[dependencies]
quote = { version = "1.0.38" }
syn = { version = "2.0.98", features = ["derive", "parsing"] }
